Added authorities field to User Info controller, plus integration test with mockmvc to test this