@@ -1,9 +1,10 @@
 package com.baeldung.newstack.web.controller;
 
-import java.util.Collections;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -13,6 +14,12 @@ public class UserInfoController {
 
     @GetMapping("/user/info")
     public Map<String, Object> getUserInfo(@AuthenticationPrincipal Jwt principal) {
-        return Collections.singletonMap("user_name", principal.getClaimAsString("preferred_username"));
+        String authorities = SecurityContextHolder.getContext()
+            .getAuthentication()
+            .getAuthorities()
+            .stream()
+            .map(authority -> authority.getAuthority())
+            .collect(Collectors.joining(", "));
+        return Map.of("user_name", principal.getClaimAsString("preferred_username"), "authorities", authorities);
     }
 }
